# mars-rock-segmentation

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  bootstrap.py  cli.py  common.py  data.py  deps.py  prediction.py  training.py
outputs/v4/: input1.json
outputs/v5/: input2.json  input3.json  input4.json
outputs/v6/: input1.json  input2.json  input3.json  input4.json  input5.json  input6.json
src/: cli.py  common.py  data.py  interview.py  prediction.py  training.py
tests/: test_prediction.py
